[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/UI/FadeIn.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/FadeOut.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/BLKCHCRY.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://src/UI/EndScreen.gd" type="Script" id=4]
[ext_resource path="res://src/UI/Buttons/NewGameButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UI/Buttons/BackToMenuButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UI/Buttons/ExitButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sounds/end_menu_music.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[node name="EndScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1080.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu"]
margin_right = 960.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.313726, 0.117647, 0.203922, 1 )
custom_constants/shadow_offset_y = 10
text = "Game Over"
align = 1

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 130.0
margin_right = 960.0
margin_bottom = 350.0
size_flags_horizontal = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 960.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_right = 960.0
scene_to_load = "res://src/Levels/MainGame.tscn"

[node name="BackToMenuButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 6 )]
anchor_right = 0.0
margin_top = 80.0
margin_right = 960.0
margin_bottom = 140.0
scene_to_load = "res://src/UI/TitleScreen.tscn"

[node name="ExitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 7 )]
anchor_right = 0.0
margin_top = 160.0
margin_right = 960.0
margin_bottom = 220.0
mouse_default_cursor_shape = 2

[node name="FadeIn" parent="." instance=ExtResource( 1 )]
mouse_filter = 2

[node name="FadeOut" parent="." instance=ExtResource( 2 )]
mouse_filter = 2

[node name="EndMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
[connection signal="fade_in_finished" from="FadeIn" to="." method="_on_FadeIn_fade_in_finished"]
